Closed
Bug 477936
Opened 16 years ago
Closed 16 years ago
The first argument of g_signal_XX functions is a gpointer so G_OBJECT macros is not needed in moz-web-view.cpp.
Categories
(Core Graveyard :: Embedding: APIs, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: hiro, Unassigned)
Details
Attachments
(1 file, 1 obsolete file)
1.19 KB,
patch
|
mfinkle
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; ja; rv:1.8.0.4) Gecko/20060508 Firefox/3.0
Build Identifier:
The first argument of g_signal_XX functions is a gpointer so G_OBJECT macros is not needed in moz-web-view.cpp.
Reproducible: Always
Reporter | ||
Comment 1•16 years ago
|
||
Attachment #361692 -
Flags: review?(mark.finkle)
Comment 2•16 years ago
|
||
Comment on attachment 361692 [details] [diff] [review]
A patch
bug 455247 fixed some of these. I don't think it fixed all of them.
If this is still an issue, can you make a new patch?
Attachment #361692 -
Flags: review?(mark.finkle) → review-
Reporter | ||
Comment 3•16 years ago
|
||
(In reply to comment #2)
> (From update of attachment 361692 [details] [diff] [review])
> bug 455247 fixed some of these. I don't think it fixed all of them.
>
> If this is still an issue, can you make a new patch?
Yes, sure.
Bu I can't see any change in http://hg.mozilla.org/incubator/embedding/rev/0daaac93ea35
Comment 4•16 years ago
|
||
Yeah, I messed up the push. Try http://hg.mozilla.org/incubator/embedding/rev/a6038143acd0
Reporter | ||
Comment 5•16 years ago
|
||
This is it.
Attachment #361692 -
Attachment is obsolete: true
Attachment #369442 -
Flags: review?(mark.finkle)
Comment 6•16 years ago
|
||
Comment on attachment 369442 [details] [diff] [review]
update patch
hmm, I notice that moz_web_view_hierarchy_changed is not in the x11 files.
Attachment #369442 -
Flags: review?(mark.finkle) → review+
Comment 7•16 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•6 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•