Bug 477936: First argument of g_signal_XX functions doesn't need the G_OBJECT cast, r=mfinkle